 - gui: renamed font_string::get_offsets to get_offset
 - gui: renamed font_string::set_shadow_offsets to set_shadow_offset
 - gui: renamed font_string::get_shadow_offsets to get_shadow_offset
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: removed uiobject::get_base()
 - gui: removed uiobject::push_on_lua()
 - gui: removed anchor::set_object() (now a reference, cannot change)
 - gui: removed font_string::get_shadow_x_offset()
 - gui: removed font_string::get_shadow_y_offset()
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
 - gui: font_string::set_offset now takes a single vector2f argument
 - gui: font_string::set_shadow_offset now takes a single vector2f argument
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added frame_renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a frame_renderer
 - gui: manager now inherits from event_manager instead of owning one (fix chicken/egg problem)
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added gui::down_cast for safer down casting
 - gui: removed clear_links() in favor of using destructors
 - gui: added mechanism to handle most cases where a widget is destroyed in a callback
 - gui: relative sizing is now only applicable to XML <Size>
 - gui: added OnReceiveDrag for frame
 - gui: added OnCursorChanged for edit_box
 - gui: added OnUpPressed and OnDownPressed callbacks to edit_box
 - gui: added set_cursor_position()/get_cursor_position() to edit_box